@@ -141,6 +141,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 78. dknewkey.sh: list public, private key using ls
 - 30/11/2022
 79. svctool.in: create servercert.rand file
+- 02/12/2022
+80. qlocal_upgrade.in: add env variable AUTOSCAN for svscan if missing
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
